boots and catss III

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                     </a>
 
                     <!-- Email - Change href to your email -->
-                    <a href="mailto: clarkout12@gmail.com" class="link-card">
+                    <a href="mailto:clarkout12@gmail.com" class="link-card">
                         <svg class="link-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="2" y="4" width="20" height="16" rx="2" />
                             <path d="m2 7 10 7 10-7" />
                         </svg>
-                        <span class="link-text">Email</span>
+                        <span class="link-text">clarkout12@gmail.com</span>
                     </a>
 
                     <!-- Generic Link - Change href to any other URL -->
